<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TicTacToeSettingsActivity">

    <TextView
        android:id="@+id/ttt_tv_TicTacToe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/GameMode_TicTacToe"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:stretchColumns="*"
        app:layout_constraintBottom_toTopOf="@+id/ttt_btn_play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ttt_tv_TicTacToe">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp">

            <TextView
                android:id="@+id/ttt_tv_GameMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GameMode"
                android:textSize="18sp" />

            <ToggleButton
                android:id="@+id/ttt_tb_GameMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textOff="@string/GameModePvP"
                android:textOn="@string/GameModePvAI" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp"
            android:visibility="invisible">

            <TextView
                android:id="@+id/ttt_tv_AIDifficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AIDifficulty"
                android:textSize="18sp"
                tools:visibility="visible" />

            <SeekBar
                android:id="@+id/ttt_sb_AIDifficulty"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="2"
                android:progress="0" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/ttt_tv_PlayerOneSymbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_one"
                android:textSize="18sp" />

            <ToggleButton
                android:id="@+id/ttt_tb_PlayerOneSymbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textOff="@string/TTT_X"
                android:textOn="@string/TTT_O" />
        </TableRow>

        <TableRow

            android:id="@+id/ttt_tr_PlayerTwoSymbolRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/ttt_tv_PlayerTwoSymbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_two"
                android:textSize="18sp" />

            <ToggleButton
                android:id="@+id/ttt_tb_PlayerTwoSymbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textOff="@string/TTT_O"
                android:textOn="@string/TTT_X" />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/ttt_btn_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>